# local-ai-soc

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DECISION_LOG.md  DEPRECATION.md  PROJECT.md  README.md  REPRODUCIBILITY_RECEIPT.md  STATE.md  STATUS.md  THREAT_MODEL.md  docker-compose.yml  pyproject.toml  smoke-test-v0.10.0.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  compliance.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.0-v1.0-MILESTONE-AUDIT.md
.planning/debug/: system-end-to-end-verification.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: Dockerfile  main.py  requirements.txt
backend/api/: analytics.py  anomaly.py  assets.py  atomics.py  attack.py  chat.py  correlate.py  coverage.py  detect.py  detection_quality.py  events.py  explain.py  export.py  feedback.py  firewall.py  graph.py  health.py  hunting.py  ingest.py  intel.py  investigate.py  investigations.py  map.py  metrics.py  notifications.py  operators.py  osint_api.py  perf.py  playbooks.py  privacy.py  provenance.py  query.py  receipts.py  recommendations.py  report_templates.py  reports.py  score.py  services.py  settings.py  telemetry.py  (+3 more)
backend/causality/: __init__.py  attack_chain_builder.py  causality_routes.py  engine.py  entity_resolver.py  mitre_mapper.py  scoring.py
backend/core/: auth.py  config.py  deps.py  logging.py  operator_utils.py  rate_limit.py  rbac.py  totp_utils.py
backend/data/: atomics.json  builtin_playbooks.py  car_analytics.json
backend/enforcement/: ipfire.py  policy.py
backend/intelligence/: anomaly_rules.py  explain_engine.py  risk_scorer.py
backend/investigation/: artifact_store.py  case_manager.py  hunt_engine.py  investigation_routes.py  tagging.py  timeline_builder.py
backend/models/: __init__.py  event.py  operator.py  playbook.py  provenance.py  receipt.py  recommendation.py  report.py
backend/services/: dnstwist_service.py  hunt_engine.py  metrics_service.py  ollama_client.py  osint.py  (+7 more)
config/: .env.example
contracts/: execution-receipt.schema.json  recommendation.schema.json
correlation/: clustering.py
dashboard/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
detections/: correlation_chains.yml  correlation_engine.py  field_map.py  matcher.py
docs/: ADR-020-hf-model.md  ADR-030-ai-recommendation-governance.md  ADR-031-transport-contract-reference.md  ADR-032-executor-failure-reference.md  AI_GOVERNANCE.md  HARDWARE-SETUP.md  SECURITY_CLAIMS.md  decision-log.md  dependency-rationale.md  manifest.md  reproducibility.md
evals/: prompt_eval_set.jsonl
fixtures/: osquery_snapshot.json  security_events.ndjson  suricata_eve_sample.ndjson
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
governance/: release_state.yaml
graph/: builder.py  schema.py
infra/: Caddyfile  docker-compose.spiderfoot.yml  docker-compose.thehive.yml  docker-compose.yml
ingestion/: chainsaw_scanner.py  entity_extractor.py  field_mapper.py  hayabusa_scanner.py  loader.py  normalizer.py  osquery_collector.py  registry.py
prompts/: analyst_qa.py  copilot.py  evidence_explain.py  incident_summary.py  investigation_summary.py  threat_hunt.py  triage.py
scripts/: __init__.py  _check-health.ps1  _e2e-verify.ps1  _start-backend.ps1  backfill_graph.py  backup-soc-brain.ps1  check_chainsaw_dedup.py  configure-acls.ps1  configure-firewall.ps1  deploy-misp.ps1  e2e-malcolm-verify.ps1  eval_models.py  generate_atomics_bundle.py  generate_car_bundle.py  ingest_attack_corpus.py  install-startup-tasks.ps1  load-scenario.py  rebuild_chroma.py  seed_siem_data.py  smoke-test-phase1.ps1  smoke-test-phase8.ps1  start-services.ps1  start.cmd  start.ps1  start_reranker.py  status.cmd  status.ps1  stop.cmd  stop.ps1  sync-chroma-corpus.ps1  uninstall-startup-tasks.ps1  verify-firewall.ps1
tests/: conftest.py
ubuntu/: evidence_archiver.py  normalization_server.py
(+965 files in other folders)
