[project]
name = "ai-soc-brain"
version = "0.1.0"
description = "Local Windows desktop AI cybersecurity investigation platform"
requires-python = ">=3.12,<3.13"
readme = "README.md"

dependencies = [
    # Backend
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.2.1",

    # HTTP client (Ollama calls)
    "httpx>=0.28.1",

    # Storage
    "duckdb==1.3.0",
    "chromadb>=0.6.3",

    # LLM / RAG
    "langgraph>=0.4.0",
    "langchain-ollama>=0.3.0",

    # Detection
    "pySigma>=0.11.0",
    "pySigma-backend-sqlite>=0.1.0",
    "PyYAML>=6.0.2",

    # Ingestion
    "evtx>=0.8.2",

    # Dev / test
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.1",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
