[project]
name = "ai-soc-brain"
version = "0.1.0"
description = "Local Windows desktop AI cybersecurity investigation platform"
requires-python = ">=3.12,<3.13"
readme = "README.md"

dependencies = [
    # Backend
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.3",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "python-multipart==0.0.22",
    "sse-starlette==3.0.3",
    # HTTP client (Ollama calls)
    "httpx==0.28.1",
    # Storage
    "duckdb==1.3.0",
    "chromadb==1.5.5",
    # LLM / RAG
    "langgraph==1.1.2",
    "langchain-ollama==1.0.1",
    # Detection
    "pySigma==1.2.0",
    "PyYAML==6.0.3",
    # Ingestion
    "evtx==0.11.0",
    # Data seeding
    "datasets>=2.21.0",
    # Metrics scheduling
    "apscheduler==3.11.2",
    "slowapi==0.1.9",
    "weasyprint>=68.1",
    "passlib[bcrypt]>=1.7.4",
    "pyotp>=2.9",
    "qrcode[pil]>=7.4",
    "python-whois==0.9.5",
    "geoip2==4.8.1",
    "shodan==1.31.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov>=6.0.0",
    "ruff==0.15.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "ingestion", "detections", "correlation", "graph", "prompts"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: unit tests (no external I/O)",
]
